# SDL-Platformer-Engine-2D

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  map_example.json
examples/src/: main.cpp
examples/src_images/: blocs.xcf
include/: Components.h  Graphics.h
src/: Components.h  Graphics.cpp  PhysicComponent.cpp  PhysicVector.cpp  Point.cpp  Polygon.cpp  Systems.h  Vector.cpp
